[package]
name = "xcurl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
serde_derive = "1.0.215"
reqwest = { version = "0.12.9", features = ["json"] }
anyhow = "1.0.93"
